--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
          </div>
     </div>
 
-    <h1 class="title">Best website for tickets reservation :</h1>
+    <h1 class="title"><i class="fa-solid fa-ticket"></i> Best website for tickets reservation :</h1>
     <pre>
 Explore and book all exclusive events and matches — from VIP sports to private concerts,
 your experience starts here — anytime, anywhere, in just a few clicks.
@@ -31,12 +31,29 @@ your experience starts here — anytime, anywhere, in just a few clicks.
     </div>
     <!--Buttons-->
     <a href="#">
-    <button class="buy">Get your ticket</button>
-    </a>
-    <a href="#">
-    <button class="account">
-        <i class="fa-regular fa-user"></i> Create an account
+    <button class="movies">
+        <i class="fa-solid fa-film"></i> Movies
     </button>
     </a>
+    <a href="#">
+    <button class="entertainment">
+        <i class="fa-solid fa-headphones"></i> Entertainment
+    </button>
+    </a>
+    <a href="#">
+    <button class="sports">
+        <i class="fa-regular fa-futbol"></i> Sports
+    </button>
+    </a>
+    <div class="sign">
+     <a href="#">Sign in</a>
+     <h1>Or</h1>
+     </div>
+     <a href="#">
+    <button class="account">
+       <i class="fa-regular fa-user"></i>  Create account
+    </button>
+    </a>
+
 </body>
 </html>
